traefik/traefik_crd/02-traefik.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-deployment
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller

      volumes:
      - name: traefik-data
        persistentVolumeClaim:
          claimName: traefik-vol

      containers:
        - name: traefik
          image: traefik:v3.0
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "500m"
              memory: "400Mi"
          args:
            - --providers.kubernetescrd
            ## certificate resolver
            - --certificatesresolvers.myresolver.acme.email=andreas.askholm@gmail.com
            - --certificatesResolvers.myresolver.acme.dnsChallenge.disablePropagationCheck=true
            - --certificatesresolvers.myresolver.acme.dnschallenge.provider=duckdns
            - --certificatesresolvers.myresolver.acme.dnschallenge=true
            - --certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json
            - --certificatesresolvers.myresolver.acme.caServer=https://acme-staging-v02.api.letsencrypt.org/directory
            ## entrypoint config
            - --entrypoints.web.http.redirections.entrypoint.to=websecure
            - --entrypoints.web.http.redirections.entrypoint.scheme=https
            - --entrypoints.web.address=:80
            - --entrypoints.websecure.address=:443
            - --entrypoints.websecure.http.tls=true
            - --entrypoints.websecure.http.tls.certresolver=myresolver
            - --entrypoints.websecure.http.tls.domains[0].main=devg4.duckdns.org
            - --entrypoints.websecure.http.tls.domains[1].sans=apidevg4.duckdns.org
            ## logging config
            - --log=true
            - --log.format=json
            - --log.level=ERROR
          ## environment variables
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
          ## mounted volumes
          volumeMounts:
          - mountPath: /letsencrypt
            name: traefik-data
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-websec-service

spec:
  type: LoadBalancer
  ports:
    - name: https
      targetPort: websecure
      port: 443
    - name: http
      targetPort: web
      port: 80
  selector:
    app: traefik
