traefik/traefik_crd/04-gui.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gui
  namespace: default
  labels:
    app: django
    name: gui

spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
      task: gui
  template:
    metadata:
      labels:
        app: django
        task: gui
    spec:
      ## volume(s) available to the gui
      volumes:
        - name: media-data
          persistentVolumeClaim:
            claimName: media-vol
      ## the container running the gui
      containers:
        - name: gui
          image: # should this be secret or does it not matter
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
              ephemeral-storage: "2Gi"
            requests:
              cpu: "500m"
              memory: "400Mi"
          ports:
            - name: incomming
              containerPort: 8000
          volumeMounts:
            - mountPath: /var/www/media
              name: media-data
---
apiVersion: v1
kind: Service
metadata:
  name: gui
  namespace: default

spec:
  ports:
    - name: gui-access
      port: 8000
  selector:
    app: django
    task: gui
